# shade

./: .gitignore  LICENSE  README.md  SECURITY.md  config.default.toml  config.noslop.toml  pyproject.toml  setup.bat
docs/: COMMANDS.md  FEATURES.md  OLLAMA_INTEGRATION.md
src/shade/: analyzer.py  cli.py  config.py  error_handler.py  evaluator.py  main.py  model.py  server.py  utils.py
webchat/: index.html  package-lock.json  package.json  vite.config.js
webchat/src/: main.js  style.css
